--- a/rhq-msg-broker/.settings/org.eclipse.jdt.ui.prefs
+++ b/rhq-msg-broker/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,4 @@
-#Mon Aug 04 13:56:29 EDT 2014
+#Wed Nov 12 14:58:40 EST 2014
 cleanup.add_default_serial_version_id=true
 cleanup.add_generated_serial_version_id=false
 cleanup.add_missing_annotations=true
