add main-class to manifest

--- a/rhq-msg-broker/pom.xml
+++ b/rhq-msg-broker/pom.xml
@@ -42,6 +42,23 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>org.rhq.msg.broker.EmbeddedBroker</mainClass>
+                            <addClasspath>false</addClasspath> <!-- if we ever want to package up the entire thing, we can set this to true -->
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <profiles>
         <profile>
             <id>run-test-broker</id>
