--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>rhq-msg-broker</module>
         <module>rhq-msg-test-common</module>
         <module>rhq-msg-broker-wf-extension</module>
+        <module>rhq-msg-sample-client</module>
     </modules>
 
     <profiles>
