--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.alohomora</groupId>
-        <artifactId>alohomora-parent</artifactId>
+        <groupId>org.rhq.next</groupId>
+        <artifactId>rhq-next-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
@@ -31,8 +31,8 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.alohomora</groupId>
-                <artifactId>alohomora-bom</artifactId>
+                <groupId>org.rhq.next</groupId>
+                <artifactId>rhq-next-bom</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
